B.4.1: Added security check limiting access for non-NetarchiveSuite classes.