@@ -73,7 +73,9 @@ function makeJmxOptions {
     echo "-Dsettings.common.jmx.port=$JMXPORT \
       -Dsettings.common.jmx.rmiPort=$(( $JMXPORT + 100 )) \
       -Dsettings.common.jmx.passwordFile=$NETARCHIVEDIR/conf/jmxremote.password \
-      -Dcom.sun.management.jmxremote";
+      -Dcom.sun.management.jmxremote \
+      -Djava.security.manager \
+      -Djava.security.policy=$NETARCHIVEDIR/conf/security.policy";
 }
 
 function makeXtermOffset {
